# hydroponics_ros

./: CMakeLists.txt  package.xml  requirements.txt  setup.py
config/: air.yaml  ec.yaml  led_temperature_roms.yaml  light.yaml  ph.yaml  pwm.yaml  relay_mapping.yaml  water_temperature_roms.yaml
launch/: air.launch  all_sensors.launch  complete_without_gui.launch  db.launch  ec.launch  led_temperature.launch  ph.launch  relay.launch  water_temperature.launch
msg/: Ec.msg  Float64Stamped.msg  LedTemperature.msg  Ph.msg
nodes/: air_node  db_node  ec_node  gui_node  led_temperature_node  light_node  ph_node  relay_node  water_temperature_node
src/hydroponics/: db.py  ds18b20.py  gui.py  mcp3221.py  node.py  pkt.py  plot.py
srv/: RequestScalar.srv  SetFloat.srv  SetInt.srv  SetRelay.srv
